--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -12,7 +12,7 @@
 		"message": "What you can do now:"
 	},
 	"firstrunExampleLinks": {
-		"message": "Check out example links to make sure Universal Bypass is working."
+		"message": "Check out example links, to make sure Universal Bypass is working."
 	},
 	"firstrunOptions": {
 		"message": "Change Universal Bypass' options."
