Fix this message because an error ocuurs

--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -75,7 +75,7 @@
 		"message": "Вы хотите переходить сразу или через несколько секунд?"
 	},
 	"infoBoxHide": {
-		"message": "Щёлкните по этому сообщению, чтобы скрыть его. Вы можете отключить функцию \"информационное сообщение\" в настройках Universal Bypass."
+		"message": "Щёлкните по этому сообщению, чтобы скрыть его. Вы можете отключить функцию \\\"информационное сообщение\\\" в настройках Universal Bypass."
 	},
 	"crowdWait": {
 		"message": "К сожалению, Вы первые, кому встретилась эта ссылка, но после Вашего ожидания другим пользователям Universal Bypass ждать больше не придётся."
